# python-repo-template

./: .envrc  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
app/: main.py
app/api/v1/: __init__.py
app/api/v1/endpoints/: example.py
app/core/: config.py  logging.py
docs/: testing.md  why.md
tests/api/v1/: test_example.py
